--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "webpack": "^5.50.0",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.0.0",
+    "webpack-lighthouse-plugin": "^1.0.9",
     "webpack-merge": "^5.8.0"
   }
 }
