--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "This is a javascript webpack tutorial project",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --config webpack.dev.js --open",
-    "build": "webpack --config webpack.prod.js"
+    "start": "node server.js",
+    "heroku-postbuild": "webpack -p"
   },
   "repository": {
     "type": "git",
