--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "This is a javascript webpack tutorial project",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "build": "webpack " 
+    "dev": "node server.js",
+    "heroku-postbuild": "webpack " 
   },
   "repository": {
     "type": "git",
