--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "node server.js",
-    "heroku-postbuild": "webpack " 
+    "heroku-postbuild": "webpack -p" 
   },
   "repository": {
     "type": "git",
