--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is a javascript webpack tutorial project",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --config webpack.dev.js --open",
+    "start": "node server.js",
     "build": "webpack --config webpack.prod.js" 
   },
   "repository": {
